# utm-dev-demo

./: .gitignore  mise.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
