[package]
name = "utm-dev-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "utm_dev_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optional — used by `utm-dev screenshot` (host-side WebDriver capture).
# Enabled via `cargo build --features webdriver`. Without the feature, the
# plugin is excluded entirely so release builds aren't impacted.
tauri-plugin-webdriver = { version = "0.2", optional = true }

[features]
webdriver = ["dep:tauri-plugin-webdriver"]

